# quiz_agentic

./: .env.example  .gitignore  README.md  README_OLD.md  cli.py  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.ts  server.ts  test-a2a.js  test_core.py  tsconfig.json
.well-known/: agent.json
agentController/: a2aService.ts  agent.ts  agentController.ts
agentServices/: agnetTool.ts
agentServices/tools/: a2aCommunication.ts
agentServices/tools/quizGenerateTool/: generateQuiz.ts  structuredResponse.ts
agentServices/tools/webSearchTool/: batchWebContentExtractor.ts  webSearchTool.ts
docs/: A2A_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  PROTOCOL_GUIDE.md
protocols/: index.ts  protocolManager.ts  protocolRouter.ts
protocols/a2a/: a2aAgent.ts  a2aCoordinator.ts
protocols/mcp/: mcpClient.ts  mcpServer.ts
quiz_agentic/: __init__.py
quiz_agentic/core/: __init__.py  agent.py  state.py
quiz_agentic/protocols/: __init__.py  a2a.py  mcp.py
quiz_agentic/schemas/: __init__.py  validation.py
quiz_agentic/tools/: __init__.py  web_tools.py
schemas/: quizSchema.ts
scripts/: a2a-demo.ts  mcp-server.ts  test-api.js  test-protocols.ts
